Milestone Report: Exploratory analysis

--- a/Milestone Report.ipynb
+++ b/Milestone Report.ipynb
@@ -6,13 +6,142 @@
    "source": [
     "# Milestone Report\n",
     "\n",
-    "Has the data scientist done basic summaries of the three files? \n",
+    "Disclosure: I have very little affinity with R and I will probably not use it in the future. Teachers are asking us to take on something we didn't learn before (NLP) and like I prefere Python I will use the Spacy library and other technologies for this capstone.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imported libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import spacy\n",
+    "from collections import Counter\n",
+    "from nltk import bigrams, trigrams\n",
+    "nlp = spacy.load('en') # loading the english model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-processing\n",
+    "We are going to focus on the english datasets. As the structure of those files are all the same (just lines of text) let's concatenate them in a single file named `corpus.txt` using the following command lines:\n",
     "\n",
-    "Word counts, line counts and basic data tables?\n",
+    "```shell\n",
+    "> cat en_US.*.txt > corpus.txt\n",
+    "> wc -l corpus.txt \n",
+    " 4269678 corpus.txt\n",
+    "```\n",
     "\n",
-    "Has the data scientist made basic plots, such as histograms to illustrate features of the data?\n",
+    "We probably only need words so let's keep only alpha tokens in lowercase. \n",
     "\n",
-    "Was the report written in a brief, concise style, in a way that a non-data scientist manager could appreciate?"
+    "We will use [spacy](https://spacy.io/) for the purpose. Like, it takes resources I will store the result in a new file named `preprocessed_corpus.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessed():\n",
+    "    with open('datasets/en_US/corpus.txt') as corpus:\n",
+    "        with open('datasets/en_US/preprocessed_corpus.txt', 'w') as preprocessed_corpus:\n",
+    "            for line in corpus.readlines():\n",
+    "                preprocessed_corpus.write('{}\\n'.format(','.join([token.lower_ for token in nlp(line.strip()) if token.is_alpha])))\n",
+    "# preprocessed()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single unique words count 24036\n"
+     ]
+    }
+   ],
+   "source": [
+    "# words_count = Counter()\n",
+    "# for line in open('datasets/en_US/preprocessed_corpus.txt').readlines():\n",
+    "#      words_count += Counter(line.strip().split(','))\n",
+    "\n",
+    "# list(bigrams( ['i', 'am', 'going', 'to', 'the', 'cinema']))\n",
+    "# list(trigrams( ['i', 'am', 'going', 'to', 'the', 'cinema']))\n",
+    "\n",
+    "print('Single unique words count {}'.format(len(words_count) ))\n",
+    "def calculate_coverage(wc):\n",
+    "    wc.most_common(200)\n",
+    "    total_nb_words = sum(wc.values())\n",
+    "    fifty_percent_words = total_nb_words * 0.5\n",
+    "    ninety_percent_words = total_nb_words * 0.9\n",
+    "    fifty_percent_count =  0\n",
+    "    ninety_percent_count =  0\n",
+    "    fifty_percent_unique_words =  0\n",
+    "    ninety_percent_unique_words =  0\n",
+    "\n",
+    "    for i, (word, count) in enumerate(wc.most_common()):\n",
+    "        if fifty_percent_count < fifty_percent_words:\n",
+    "            fifty_percent_count += count\n",
+    "            if fifty_percent_count >= fifty_percent_words:\n",
+    "                fifty_percent_unique_words = i + 1\n",
+    "            \n",
+    "        if ninety_percent_count < ninety_percent_words:\n",
+    "            ninety_percent_count += count\n",
+    "        else:\n",
+    "            ninety_percent_unique_words = i + 1\n",
+    "    \n",
+    "    return (fifty_percent_unique_words, ninety_percent_unique_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How do you evaluate how many of the words come from foreign languages?\n",
+    "- Use a static dictionary\n",
+    "- Test if the characters belong the the alphabet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Can you think of a way to increase the coverage -- identifying words that may not be in the corpora or using a smaller number of words in the dictionary to cover the same number of phrases?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling"
    ]
   },
   {
@@ -39,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
